# genesis-2.1.0beta_cgdyn

./: .gitignore  Makefile.in  README  aclocal.m4  configure.ac
src/: Makefile.in  config.h.in
src/analysis/: Makefile.in
src/analysis/clustering/: Makefile.in
src/analysis/clustering/kmeans_clustering/: Makefile.in
src/analysis/converter/: Makefile.in
src/analysis/converter/cg_convert/: Makefile.in
src/analysis/converter/crd_convert/: Makefile.in
src/analysis/converter/pcrd_convert/: Makefile.in
src/analysis/converter/remd_convert/: Makefile.in
src/analysis/converter/rst_convert/: Makefile.in
src/analysis/converter/rst_upgrade/: Makefile.in
src/analysis/free_energy/: Makefile.in
src/analysis/free_energy/mbar_analysis/: Makefile.in
src/analysis/free_energy/meanforce_analysis/: Makefile.in
src/analysis/free_energy/pmf_analysis/: Makefile.in
src/analysis/free_energy/wham_analysis/: Makefile.in
src/analysis/interface/: Makefile.in
src/analysis/libana/: Makefile.in
src/analysis/mode_analysis/: Makefile.in
src/analysis/sp_analysis/: Makefile.in
src/analysis/trj_analysis/: Makefile.in
src/analysis/utilities/: Makefile.in
src/atdyn/: Makefile.in
src/cgdyn/: .gitignore  Makefile.am  Makefile.depends  Makefile.in  Makefile.local.gnu.cgdyn.cpu  Makefile.lumi.cray.cgdyn.cpu  Makefile.lumi.gnu.cgdyn.cpu  cg_assign_velocity  cg_assign_velocity.fpp  cg_boundary.fpp  cg_boundary_str.fpp  cg_communicate.fpp  cg_communicate_str.fpp  cg_constraints.fpp  cg_constraints_str.fpp  cg_control.fpp  cg_domain.fpp  cg_domain_str.fpp  cg_dynamics.fpp  cg_dynamics_str.fpp  cg_dynvars.fpp  cg_dynvars_str.fpp  cg_enefunc.fpp  cg_enefunc_fit.fpp  cg_enefunc_gromacs.fpp  cg_enefunc_localres.fpp  cg_enefunc_restraints.fpp  cg_enefunc_str.fpp  cg_energy.fpp  cg_energy_angles.fpp  cg_energy_bases.fpp  cg_energy_bonds.fpp  cg_energy_dihedrals.fpp  cg_energy_dihedrals1.fpp  cg_energy_go.fpp  cg_energy_martini.fpp  cg_energy_nonlocal.fpp  cg_energy_restraints.fpp  cg_energy_str.fpp  cg_energy_table_linear_bondcorr.fpp  (+28 more)
src/lib/: Makefile.in  constants.fpp  fileio.fpp  fileio_data.fpp  fileio_rst.fpp  molecules.fpp  molecules_str.fpp  random.fpp  timers.fpp
src/lib/json-fortran/: Makefile.in
src/lib/qsimulate/: Makefile.in
src/spdyn/: Makefile.in
(+32 files in other folders)
